--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/bootstrap.css">
     <link rel="stylesheet" href="/styles/estilos.css">
+    <link rel="stylesheet" href="../static/stilos.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
 </head>
 <header>
     <nav class="navbar navbar-expand-rg navbar-light bg-dark">
         <button type="button" th:href="/listarContacto" class="btn btn-light navbar-expand-rg float-right">Entrar</button>
+        <button type="button" th:href="/iracreateuser" class="btn btn-light navbar-expand-rg"><i class="fas fa-user-plus"></i> Contacto nuevo</button>
     </nav>
 </header>
 
 <body>
     <h1>Agenda</h1>
-    <div id="izquierdo">
+        <div id="izquierdo">
         <div class="paddign"><i class="far fa-save fa-lg"></i>
             <span>Guarda tus contactos</span>
         </div>
