--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 </head>
 <header>
     <nav class="navbar navbar-expand-rg navbar-light bg-dark">
-        <button type="button" th:href="/listarContacto" class="btn btn-light navbar-expand-rg float-right">Entrar</button>
+        <button type="button" th:href="/iraListarContacto" class="btn btn-light navbar-expand-rg float-right">Entrar</button>
         <button type="button" th:href="/iracreateuser" class="btn btn-light navbar-expand-rg"><i class="fas fa-user-plus"></i> Contacto nuevo</button>
     </nav>
 </header>
