--- a/src/main/resources/templates/createuser.html
+++ b/src/main/resources/templates/createuser.html
@@ -28,7 +28,7 @@
 					</div>
 					<div class="form-group col-md-6">
 						<label for="inputApellido1">Primer Apellido</label>
-						<input type="text" class="form-control" id="inputApellido1" placeholder="Primer apellido" th:field="*{apellidos1}">
+						<input type="text" class="form-control" id="inputApellido1" placeholder="Primer apellido" th:field="*{apellido1}">
 					</div>
 					<div class="form-group col-md-6">
 						<label for="inputApellido2">Segundo Apellido</label>
@@ -40,11 +40,11 @@
 					</div>
 					<div class="form-group col-md-6">
 						<label for="inputFechadenacimiento">Fecha de nacimiento</label>
-						<input type="text" class="form-control" id="inputFechadenacimiento" placeholder="Fecha de nacimiento" th:field="*{fechadenacimiento}">
+						<input type="text" class="form-control" id="inputFechadenacimiento" placeholder="Fecha de nacimiento" th:field="*{fechanacimiento}">
 					</div>
 					<div class="form-group col-md-6">
 						<label for="inputTelefono">Telefono</label>
-						<input type="text" class="form-control" id="inputTelefono" placeholder="Telefono" th:field="*{telefono}">
+						<input type="text" class="form-control" id="inputTelefono" placeholder="Telefono" th:field="*{telefonos}">
 					</div>
 					<div class="form-group col-md-6">
 					    <select class="form-control">
