--- a/src/main/resources/templates/createuser.html
+++ b/src/main/resources/templates/createuser.html
@@ -20,7 +20,9 @@
     <main role="main" class="flex-shrink-0">
 		<div class="container">
 		    <h1>Crear un contacto nuevo</h1>
-			<form action="#" th:action="@{/createuser}" th:object="${persona}" method="post">
+			
+			<form th:action="@{/createuser}" th:object="${persona}"
+				method="post">
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="inputNombre">Nombre</label>
@@ -28,7 +30,7 @@
 					</div>
 					<div class="form-group col-md-6">
 						<label for="inputApellido1">Primer Apellido</label>
-						<input type="text" class="form-control" id="inputApellido1" placeholder="Primer apellido" th:field="*{apellidos1}">
+						<input type="text" class="form-control" id="inputApellido1" placeholder="Primer apellido" th:field="*{apellido1}">
 					</div>
 					<div class="form-group col-md-6">
 						<label for="inputApellido2">Segundo Apellido</label>
