--- a/src/main/resources/templates/ListarContactos.html
+++ b/src/main/resources/templates/ListarContactos.html
@@ -43,7 +43,7 @@
             </thead>
             <tbody>
                 <tr th:each="persona: ${personas}" class="bg-white">
-                    <td><a th:href="@{/Detalle/} + ${persona.id}" th:text="${persona.nombre}"></a></td>
+                    <td><a th:href="@{'/Detalle/' + ${persona.idpersona}}" th:text="${persona.nombre}"></a></td>
                     <td th:text="${persona.apellido1}"></td>
                     <td th:text="${persona.apellido2}"></td>
                 </tr>
