--- a/src/main/resources/templates/AltaProvincias.html
+++ b/src/main/resources/templates/AltaProvincias.html
@@ -29,7 +29,7 @@
 						<input type="text" class="form-control" id="inputNombre" placeholder="Introduce el mombre de la provincia" th:field="*{provincia}">
 					</div>
 				</div>
-				<button type="submit" class="btn btn-primary" th:text="${provincia.id} ? 'Editar': 'Crear'">Crear Provincia</button>
+				<button type="submit" class="btn btn-primary" th:text="${provincia.idprovincia} ? 'Editar': 'Crear'">Crear Provincia</button>
 			</form>
 		</div>
 	</main>
