--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
 <header>
     <nav class="navbar navbar-expand-rg navbar-light bg-dark">
         <a type="button" th:href="@{/iraListarContacto}" class="btn btn-light navbar-expand-rg float-right">Entrar</a>
+        <a type="button" th:href="@{/iraListarProvincia}" class="btn btn-light navbar-expand-rg float-right">Entrar a provincias</a>
         <a type="button" th:href="@{/iracreateuser}" class="btn btn-light navbar-expand-rg"><i class="fas fa-user-plus"></i> Contacto nuevo</a>
     </nav>
 </header>
