--- a/src/main/resources/templates/ListarContactos.html
+++ b/src/main/resources/templates/ListarContactos.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="container">
-        <a th:href="@{/createuser}" class="btn btn-success"><i class="fa fa-plus"></i> Nuevo contacto</a>
+        <a th:href="@{/createContacto}" class="btn btn-success"><i class="fa fa-plus"></i> Nuevo contacto</a>
         <table class="table table-striped table-bordered center bg-white">
             <thead class="thead-inverse">
                 <tr>
