--- a/src/main/resources/templates/CrearContacto.html
+++ b/src/main/resources/templates/CrearContacto.html
@@ -46,7 +46,7 @@
 					</div>
 					<div class="form-group col-md-6">
 						<label for="inputTelefono">Telefono</label>
-						<input type="text" class="form-control" id="inputTelefono" placeholder="Telefono" th:field="*{telefonos}">
+						<input type="text" class="form-control" id="inputTelefono" placeholder="Telefono" th:field="*{telefonos[0].telefono}">
 					</div>
 					<div class="form-group col-md-6">
 					    <select class="form-control">
