--- a/src/main/resources/templates/ListarProvincias.html
+++ b/src/main/resources/templates/ListarProvincias.html
@@ -10,7 +10,7 @@
 	href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
 	integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
 	crossorigin="anonymous">
-<link rel="stylesheet" href="styles/estilosanti.css">
+<link rel="stylesheet" href="../static/estilosanti.css">
 <link href="https://fonts.googleapis.com/css?family=Lobster"
 	rel="stylesheet">
 </head>
