--- a/src/main/resources/templates/DetalleContacto.html
+++ b/src/main/resources/templates/DetalleContacto.html
@@ -2,62 +2,78 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8" />
-    <title th:text="${persona.nombre}">Insert title here</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
+<meta charset="UTF-8" />
+<title th:text="${persona.nombre}">Insert title here</title>
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
 </head>
 
 <body>
-    <div class="container">
-        <h1 class="text-secondary border-top-0 border-left-0 border-right-0">
-            Agenda</h1>
-        <h1 th:text="${titulo}" class="text-secondary border-top-0 border-left-0 border-right-0"></h1>
-        <p th:each="persona: ${personas}"></p>
-        <a th:href="@{'/edit/' + ${persona.idpersona}}" class="btn btn-success"><i class="fa fa-plus"></i> Editar contacto</a>
-        <a th:href="@{'/delete/' + ${persona.idpersona}}" class="btn btn-success" method="post"><i class="fa fa-plus"></i> Eliminar contacto</a>
-        <br>
-        <h1 style="color: blue">Nombre:</h1>
-        <h2 th:text="${persona.nombre}"></h2>
-        <br>
-        <h1 style="color: blue">Apellidos:</h1>
-        <h2 th:text="${persona.apellido1}"></h2>
-        <h2 th:text="${persona.apellido2}"></h2>
-        <br>
-        <h1 style="color: blue">Fecha de Nacimiento:</h1>
-        <h2 th:text="${persona.fechanacimiento}"></h2>
-    </div>
-    <div class="container">
-        <table class="table table-striped table-bordered">
-            <thead class="thead-inverse">
-                <tr>
-                    <th>Telefonos</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="telefono: ${persona.telefonos}">
-                    <td th:text="${telefono.telefono}"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="container">
-        <table class="table table-striped table-bordered">
-            <thead class="thead-inverse">
-                <tr>
-                    <th>Direcciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="direccion: ${persona.direccions}">
-                    <td th:text="${direccion.direccion}"></td>
-                    <td th:text="${direccion.codpostal}"></td>
-                    <td th:text="${direccion.localidad}"></td>
-                    <td th:text="${direccion.provincia.provincia}"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
+	<div class="container">
+		<h1 th:text=${titulo}
+			class="text-secondary border-top-0 border-left-0 border-right-0"></h1>
+	 <br>
+	 <a class="btn btn-primary btn-xs" th:href="@{/edit/} + ${persona.idpersona}" th:text="'Editar Contacto'"></a>
+					<a class="btn btn-danger btn-xs" th:href="@{/delete/} + ${persona.idpersona}" 
+					th:text="'Eliminar Contacto'" onclick ="return confirm('Estas seguro que quieres eliminar?')">					
+					</a>
+		
+	    <div>
+	    <br>
+	    	<table class="table table-striped table-bordered">
+			<thead class="thead-inverse">
+				<tr>
+					<th class="text-center">Nombre de contacto</th>
+					<th class="text-center">Primer apellido</th>
+					<th class="text-center">Segundo Apellido</th>
+					<th class="text-center">DNI</th>
+					<th class="text-center">FechaNacimiento</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="persona: ${persona}" class="bg-white">
+					<td class="text-center" th:text="${persona.nombre}"></td>
+					<td class="text-center" th:text="${persona.apellido1}"></td>
+					<td class="text-center" th:text="${persona.apellido2}"></td>
+					<td class="text-center" th:text="${persona.dni}"></td>
+					<td class="text-center" th:text="${persona.fechanacimiento}"></td>
+				</tr>
+			</tbody>
+		</table>
+		<table class="table table-striped table-bordered">
+			<thead class="thead-inverse">
+				<tr>
+					<th class="text-center">Direcciones</th>
+					<th class="text-center">C.Postal</th>
+					<th class="text-center">Localidad</th>
+					<th class="text-center">Provincia</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="direccion: ${persona.direccions}">
+					<td class="text-center" th:text="${direccion.direccion}"></td>
+					<td class="text-center" th:text="${direccion.codpostal}"></td>
+					<td class="text-center" th:text="${direccion.localidad}"></td>
+					<td class="text-center" th:text="${direccion.provincia.provincia}"></td>
+				</tr>
+			</tbody>
+		</table>
+		<table class="table table-striped table-bordered center">
+			<thead class="thead-inverse">
+				<tr>
+					<th class="text-center">Telefonos</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr class="text-center" th:each="telefono: ${persona.telefonos}">
+					<td class="text-center" th:text="${telefono.telefono}"></td>
+				</tr>
+			</tbody>
+		</table>
+	    
+	    </div>
+		
+	</div>
 </body>
 
 </html>
