Correciones de bootstrap

--- a/src/main/resources/templates/CrearProvincia.html
+++ b/src/main/resources/templates/CrearProvincia.html
@@ -9,7 +9,7 @@
 	href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
 	integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
 	crossorigin="anonymous">
-<link rel="stylesheet" href="../static/stilos.css">
+<link rel="stylesheet" href="stilos.css">
 <link href="https://fonts.googleapis.com/css?family=Lobster"
 	rel="stylesheet">
 </head>
