--- a/src/main/resources/templates/ListarProvincias.html
+++ b/src/main/resources/templates/ListarProvincias.html
@@ -3,14 +3,14 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Listar Contactos</title>
+<title>Listar Provincias</title>
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet"
 	href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
 	integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
 	crossorigin="anonymous">
-<link rel="stylesheet" href="../static/estilosanti.css">
+<link rel="stylesheet" href="estilosanti.css">
 <link href="https://fonts.googleapis.com/css?family=Lobster"
 	rel="stylesheet">
 </head>
