--- a/src/main/resources/templates/ListarContactos.html
+++ b/src/main/resources/templates/ListarContactos.html
@@ -33,6 +33,16 @@
 
     <div class="container">
         <a th:href="@{/createContacto}" class="btn btn-success"><i class="fa fa-plus"></i> Nuevo contacto</a>
+        <form class="form-inline mt-2 mt-md-0" th:action="@{/ListarContactos}" method="get">
+            <div class="input-group">
+                <input type="text" class="form-control form-control-sm" placeholder="Buscar contacto" th:name="search" th:value="${param.search}" >
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary btn-sm" type="submit" id="button-addon2">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </div>
+            </div>
+        </form>
         <table class="table table-striped table-bordered center bg-white">
             <thead class="thead-inverse">
                 <tr>
