--- a/src/main/resources/templates/ListarContactos.html
+++ b/src/main/resources/templates/ListarContactos.html
@@ -40,6 +40,12 @@
                     <button class="btn btn-outline-secondary btn-sm" type="submit" id="button-addon2">
                         <i class="fa fa-search"></i>
                     </button>
+                    <input type="hidden" class="form-control form-control-sm" placeholder="Buscar contacto por provincia" th:name="search" th:value="${param.search}" style="display: none"; >
+                </div><br>
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary btn-sm" type="submit" id="button-addon3" style="display: none";>
+                        <i class="fa fa-search"></i>
+                    </button>
                 </div>
             </div>
         </form>
@@ -60,5 +66,5 @@
             </tbody>
         </table>
     </div>
-
-</body></html>
+</body>
+</html>
